--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -65,22 +65,22 @@
             <h2 class="text-center"><strong>Habilidades</strong></h2>
             <div class="row">
                 <div class="col-md-4 mb-4">
-                    <img src="IMG/C++.png" alt="C++" class="img-fluid habilidad fade-in">
+                    <img src="IMG/C++.png" alt="C++" class="img-fluid habilidad barrido">
                 </div>
                 <div class="col-md-4 mb-4">
-                    <img src="IMG/PYTHON.png" alt="Python" class="img-fluid habilidad fade-in">
+                    <img src="IMG/PYTHON.png" alt="Python" class="img-fluid habilidad barrido">
                 </div>
                 <div class="col-md-4 mb-4">
-                    <img src="IMG/PHP.png" alt="PHP" class="img-fluid habilidad fade-in">
+                    <img src="IMG/PHP.png" alt="PHP" class="img-fluid habilidad barrido">
                 </div>
                 <div class="col-md-4 mb-4">
-                    <img src="IMG/JS.png" alt="JavaScript" class="img-fluid habilidad fade-in">
+                    <img src="IMG/JS.png" alt="JavaScript" class="img-fluid habilidad barrido">
                 </div>
                 <div class="col-md-4 mb-4">
-                    <img src="IMG/CSS.png" alt="CSS" class="img-fluid habilidad fade-in">
+                    <img src="IMG/CSS.png" alt="CSS" class="img-fluid habilidad barrido">
                 </div>
                 <div class="col-md-4 mb-4">
-                    <img src="IMG/HTML.png" alt="HTML" class="img-fluid habilidad fade-in">
+                    <img src="IMG/HTML.png" alt="HTML" class="img-fluid habilidad barrido">
                 </div>
             </div>
         </section>
@@ -90,33 +90,27 @@
                 <h2 class="text-center"><strong>Portafolio</strong></h2>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="card mb-4">
-                            <img src="IMG/formulario.png" class="card-img-top" alt="formulario">
-                            <div class="card-body">
-                                <h5 class="card-title">Formulario</h5>
-                                <a href="https://github.com/sh3ld0/Portafolio/blob/main/form/index.html" class="btn btn-primary" target="_blank">Ver código</a>
-                                <a href="https://github.com/sh3ld0/Portafolio/tree/main/form" class="btn btn-secondary" target="_blank">Ver proyecto</a>
-                            </div>
+                        <img src="IMG/formulario.png" class="card-img-top" alt="formulario">
+                        <div class="card-body">
+                            <h5 class="card-title">Formulario</h5>
+                            <a href="https://github.com/sh3ld0/Portafolio/blob/main/form/index.html" class="btn btn-primary" target="_blank">Ver código</a>
+                            <a href="https://github.com/sh3ld0/Portafolio/tree/main/form" class="btn btn-secondary" target="_blank">Ver proyecto</a>
+                    </div>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="IMG/3Raya.png" class="card-img-top" alt="3Raya">
+                        <div class="card-body">
+                            <h5 class="card-title">3 en raya Basico</h5>
+                            <a href="https://sh3ld0.github.io/Portafolio/" class="btn btn-primary" target="_blank">Ver código</a>
+                            <a href="enlace_a_pagina_proyecto2" class="btn btn-secondary" target="_blank">Ver proyecto</a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card mb-4">
-                            <img src="IMG/3Raya.png" class="card-img-top" alt="3Raya">
-                            <div class="card-body">
-                                <h5 class="card-title">3 en raya Basico</h5>
-                                <a href="https://sh3ld0.github.io/Portafolio/" class="btn btn-primary" target="_blank">Ver código</a>
-                                <a href="enlace_a_pagina_proyecto2" class="btn btn-secondary" target="_blank">Ver proyecto</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4">
-                            <img src="IMG/portafolio.png" class="card-img-top" alt="Portafolio">
-                            <div class="card-body">
-                                <h5 class="card-title">Portafolio Basico</h5>
-                                <a href="https://github.com/sh3ld0/Portafolio/blob/main/portafolio/index.html" class="btn btn-primary" target="_blank">Ver código</a>
-                                <a href="https://github.com/sh3ld0/Portafolio/tree/main/portafolio" class="btn btn-secondary" target="_blank">Ver proyecto</a>
-                            </div>
+                        <img src="IMG/portafolio.png" class="card-img-top" alt="Portafolio">
+                        <div class="card-body">
+                            <h5 class="card-title">Portafolio Basico</h5>
+                            <a href="https://github.com/sh3ld0/Portafolio/blob/main/portafolio/index.html" class="btn btn-primary" target="_blank">Ver código</a>
+                            <a href="https://github.com/sh3ld0/Portafolio/tree/main/portafolio" class="btn btn-secondary" target="_blank">Ver proyecto</a>
                         </div>
                     </div>
                 </div>
