--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -94,7 +94,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Formulario</h5>
                             <a href="https://github.com/sh3ld0/Portafolio/blob/main/form/index.html" class="btn btn-primary" target="_blank">Ver código</a>
-                            <a href="https://github.com/sh3ld0/Portafolio/tree/main/form" class="btn btn-secondary" target="_blank">Ver proyecto</a>
+                            <a href="https://sh3ld0.github.io/Portafolio/form/" class="btn btn-secondary" target="_blank">Ver proyecto</a>
                     </div>
                     </div>
                     <div class="col-md-4">
@@ -110,7 +110,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Portafolio Basico</h5>
                             <a href="https://github.com/sh3ld0/Portafolio/blob/main/portafolio/index.html" class="btn btn-primary" target="_blank">Ver código</a>
-                            <a href="https://github.com/sh3ld0/Portafolio/tree/main/portafolio" class="btn btn-secondary" target="_blank">Ver proyecto</a>
+                            <a href="https://sh3ld0.github.io/Portafolio/portafolio/" class="btn btn-secondary" target="_blank">Ver proyecto</a>
                         </div>
                     </div>
                 </div>
