--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -101,7 +101,7 @@
                         <img src="IMG/3Raya.png" class="card-img-top" alt="3Raya">
                         <div class="card-body">
                             <h5 class="card-title">3 en raya Basico</h5>
-                            <a href="https://sh3ld0.github.io/Portafolio/" class="btn btn-primary" target="_blank">Ver código</a>
+                            <a href="https://github.com/sh3ld0/Portafolio/blob/main/3%20raya%20boceto/primps.py" class="btn btn-primary" target="_blank">Ver código</a>
                         </div>
                     </div>
                     <div class="col-md-4">
